@@ -12,6 +12,8 @@
     Davis.
   * Fixed private methods in the C parser.  Bug #24599 by Aaron Patterson.
   * Fixed display of markup on RDoc main page.  Bug #24168 by rhubarb.
+  * Fixed display of \\ character in documentation proceeding words.
+    Bug #22112 by James Gray.  See RDoc for details.
 
 === 2.4.1 / 2009-02-26
 
